edgevox-onnx/c-api/c-api.h

/** @brief Configuration for online punctuation. */
typedef struct EdgevoxOnnxOnlinePunctuationConfig {
  /** Model configuration. */
  EdgevoxOnnxOnlinePunctuationModelConfig model;
} EdgevoxOnnxOnlinePunctuationConfig;
/** @brief Opaque online punctuation handle. */
typedef struct EdgevoxOnnxOnlinePunctuation EdgevoxOnnxOnlinePunctuation;
/**
 * @brief Create an online punctuation processor.
 *
 * @param config Online punctuation configuration.
 * @return A newly allocated punctuation processor on success, or NULL on
 *         error. Free it with EdgevoxOnnxDestroyOnlinePunctuation().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOnlinePunctuation *
EdgevoxOnnxCreateOnlinePunctuation(
    const EdgevoxOnnxOnlinePunctuationConfig *config);
/**
 * @brief Destroy an online punctuation processor.
 *
 * @param punctuation A pointer returned by EdgevoxOnnxCreateOnlinePunctuation().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOnlinePunctuation(
    const EdgevoxOnnxOnlinePunctuation *punctuation);
/**
 * @brief Add punctuation to one text chunk using the online punctuation model.
 *
 * @param punctuation A pointer returned by EdgevoxOnnxCreateOnlinePunctuation().
 * @param text Input text chunk.
 * @return A newly allocated punctuated string. Free it with
 *         EdgevoxOnnxOnlinePunctuationFreeText().
 *
 * @code
 * const char *out =
 *     EdgevoxOnnxOnlinePunctuationAddPunct(punct,
 *         "how are you i am fine thank you");
 * printf("%s\n", out);
 * EdgevoxOnnxOnlinePunctuationFreeText(out);
 * @endcode
 */
EDGEVOX_ONNX_API const char *EdgevoxOnnxOnlinePunctuationAddPunct(
    const EdgevoxOnnxOnlinePunctuation *punctuation, const char *text);
/**
 * @brief Free a string returned by EdgevoxOnnxOnlinePunctuationAddPunct().
 *
 * @param text A pointer returned by EdgevoxOnnxOnlinePunctuationAddPunct().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxOnlinePunctuationFreeText(const char *text);