edgevox-onnx/c-api/cxx-api.h

// ============================================================================
// Online Punctuation
// ============================================================================
/** @brief Online punctuation model configuration. */
struct OnlinePunctuationModelConfig {
  /** Model file. */
  std::string cnn_bilstm;
  /** BPE vocabulary file. */
  std::string bpe_vocab;
  /** Number of inference threads. */
  int32_t num_threads = 1;
  /** Enable verbose debug logging. */
  bool debug = false;
  /** Execution provider such as `"cpu"`. */
  std::string provider = "cpu";
};
/** @brief Configuration for online punctuation. */
struct OnlinePunctuationConfig {
  /** Model configuration. */
  OnlinePunctuationModelConfig model;
};